# snap-server

./: .ghci  .gitignore  .gitmodules  .mailmap  .stylish-haskell.yaml  .travis.yml  CONTRIBUTORS  README.SNAP.md  README.md  cabal.project  changelog.md  deploy_hpc.sh  deploy_key_snap_code_coverage.enc  deploy_key_snap_server.enc  haddock.sh  runTestsAndCoverage.sh  snap-server.cabal  stack.yaml
.github/workflows/: ci.yml
benchmark/: Benchmark.hs
benchmark/Snap/Internal/Http/Parser/: Benchmark.hs  Data.hs
cbits/: linger.c
extra/: haddock.css
pong/: Main.hs
src/Control/Concurrent/: Extended.hs
src/Data/Concurrent/: HashMap.hs
src/Data/Concurrent/HashMap/: Internal.hs
src/Data/HashMap/: Concurrent.hs
src/Data/HashMap/Concurrent/: Internal.hs
src/Snap/Http/: CORS.hs  Server.hs
src/Snap/Http/Server/: CmdlineConfig.hs  Config.hs  Types.hs
src/Snap/Internal/Http/: Parser.hs  Server.hs
src/Snap/Internal/Http/Server/: Address.hs  Backend.hs  Cleanup.hs  Clock.hs  CmdlineConfig.hs  Common.hs  Config.hs  Date.hs  GnuTLS.hs  HttpPort.hs  LibevBackend.hs  LibevBackend.hsc  ListenHelpers.hs  Parser.hs  Session.hs  SimpleBackend.hs  SimpleBackend.hsc  Socket.hs  TLS.hs  Thread.hs  TimeoutManager.hs  TimeoutTable.hs  Types.hs  gnutls_helpers.c
src/System/: FastLogger.hs  SendFile.hs  SendFile.hsc
src/System/SendFile/: Darwin.hsc  FreeBSD.hsc  Linux.hsc
test/: .ghci  Paths_snap_server.hs  TestSuite.hs  bad_key.pem  cert.pem  dummy.txt  key.pem  pongserver.aux  pongserver.hp  pongserver.prof.1.txt  pongserver.ps  runTestsAndCoverage.sh  snap-server-testsuite.cabal
test/Snap/Internal/Http/Server/Address/: Tests.hs
test/Snap/Internal/Http/Server/Cleanup/: Tests.hs
test/Snap/Internal/Http/Server/Parser/: Tests.hs
test/Snap/Internal/Http/Server/Session/: Tests.hs
test/Snap/Internal/Http/Server/Socket/: Tests.hs
test/Snap/Internal/Http/Server/TimeoutManager/: Tests.hs
test/Snap/Test/: Common.hs
test/System/SendFile/: Tests.hs
test/Test/: Blackbox.hs
test/Test/Common/: Rot13.hs  TestHandler.hs
test/benchmark/: Benchmark.hs
test/benchmark/Snap/Internal/Http/Parser/: Benchmark.hs  Data.hs
test/blackbox/: TestSuite.hs
test/cbits/: errno_util.c
test/common/: Paths_snap_server.hs
test/common/Snap/Test/: Common.hs
test/common/Test/Common/: Rot13.hs  TestHandler.hs
test/pongserver/: Main.hs
test/suite/: TestSuite.hs
test/suite/Data/Concurrent/HashMap/: Tests.hs
test/suite/Data/HashMap/Concurrent/: Tests.hs
test/suite/Snap/Internal/Http/Parser/: Tests.hs
test/suite/Snap/Internal/Http/Server/: Tests.hs
test/suite/Snap/Internal/Http/Server/TimeoutManager/: Tests.hs
test/suite/Test/: Blackbox.hs
test/testserver/: Main.hs
tools/: benchmark_shell.py
